--- a/componentes/segmentacion.html
+++ b/componentes/segmentacion.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="jumbotron bg-primary">
+    <!-- <section class="jumbotron bg-primary">
         <div class="jumbotron_body">
             <div class="container">
                 <div class="row"></div>
@@ -23,7 +23,7 @@
             <div class="row">
                 <div id="alignment-example" class="collapse navbar-collapse">
                     <ul class="nav nav-tabs text-arg-azul">
-                        <li><a href="../notificaciones/index.html"><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a></li>
+                        <li><a href="../paginas/home.html"><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a></li>
                         <li><a href="../notificaciones/index.html"><i class="icono-arg-alarma-negativo"></i><strong>Panel de notificaciones</strong></a></li>
                         <li><a href="../campañas/index.html"><i class="fa fa-signal"></i><strong>Estadísticas</strong></a></li>
                         <li><a href="../plantillas/index.html"><i class="fa fa-cog"></i><strong>Configuración</strong></a></li>
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     
     <body>
         <div class="container">
