--- a/notificaciones/index.html
+++ b/notificaciones/index.html
@@ -6,133 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../poncho.min.css">
+    <link href="/poncho/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/argob/poncho@release-1.x/dist/css/icono-arg.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 
 <body>
-    <!--El header debería ser inyectado ya que es un componente reutilizable pero 
-    en esta instancia se agrega la etiqueta directamente en el archivo-->
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid container">
-                <div class="row">
-                    <div id="alignment-example" class="collapse navbar-collapse bg-gray">
-                        <ul class="nav navbar-nav main-menu">
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="Notificaciones">Notificaciones<span class="caret"></span></a>
-                                <ul class="dropdown-menu" aria-labelledby="Notificaciones">
-                                    <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
-                                    <li><a href="../campañas/index.html">Campañas</a></li>
-                                    <li><a href="../plantillas/index.html">Plantillas</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="../estadisticas/index.html">Estadísticas</a>
-                            </li>
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="../usuarios/usuarios.html">Usuarios</a></li>
-                                    <li><a href="../usuarios/rol.html">Rol</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                            <ul class="nav navbar-nav main-menu pull-right">
-                                <li>
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Raúl Perez<span class="caret"></span></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="">Salir</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                    </div>
-                </div>
-                            
+    <!-- <section class="jumbotron bg-primary">
+        <div class="jumbotron_body">
+            <div class="container">
+                <div class="row"></div>
             </div>
-        </nav>
-    </header>
-    <main>
+        </div>
+    </section>
+    <div class="bg-gray">
         <div class="container">
             <div class="row">
-                <section>
-                    <article class="row">
+                <div id="alignment-example" class="collapse navbar-collapse">
+                    <ul class="nav nav-tabs text-arg-azul">
+                        <li><a href="../paginas/home.html"><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a></li>
+                        <li><a href="../notificaciones/index.html"><i class="icono-arg-alarma-negativo"></i><strong>Notificaciones</strong></a></li>
+                        <li><a href="../campañas/index.html"><i class="fa fa-signal"></i><strong>Estadísticas</strong></a></li>
+                        <li><a href="../plantillas/index.html"><i class="fa fa-cog"></i><strong>Configuración</strong></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <main>
+        <div class="container">
+            <div class="row  m-b-4">
+                    <div class="row">
+                        <div class="col-md-12  m-t-2">
+                            <h1 class="h4 p-x-1 m-b-0">Panel de notificaciones</h1>
+                            <div class="col-md-12">
+                                <hr>
+                            </div>                            
+                            <button onclick="location.replace('../paginas/home.html')" class="btn btn-success btn-tag pull-right m-x-1">+ Nueva notificación</button>
+                        <div>
+                    </div>
+                    <div class="row m-b-4 p-x-1">
                         <div class="col-md-12">
-                            <h1 class="h3 m-t-2">Panel de notificaciones</h1>
-                            <hr>
-                            <button onclick="location.replace('./nueva.html')" class="btn btn-success btn-sm pull-right">+ Nueva notificación</button>
-                            <div>
-                                <section>
-                                    <h2 class="h4">Notificaciones en proceso</h2>
-                                    <table class="table table-responsive-poncho table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th><p class="text-muted">Nombre</p></th>
-                                            <th><p class="text-muted">Campaña</p></th>
-                                            <th><p class="text-muted">Fecha</p></th>
-                                            <th><p class="text-muted">Accion</p></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td><strong>Prevení el Dengue</strong></td>
-                                            <td><strong>Dengue</strong></td>
-                                            <td><strong>AAAA/MM/DD</strong></td>
-                                            <td><button  class="btn btn-primary btn-sm" onclick="location.replace('./editar.html')">Editar</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>Notificación 6</strong></td>
-                                            <td><strong>-</strong></td>
-                                            <td><strong>AAAA/MM/DD</strong></td>
-                                            <td><button class="btn btn-primary btn-sm">Editar</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>Notificación 7</strong></td>
-                                            <td><strong>Campaña C</strong></td>
-                                            <td><strong>AAAA/MM/DD</strong></td>
-                                            <td><button class="btn btn-primary btn-sm">Editar</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>Notificación 8</strong></td>
-                                            <td><strong>Campaña B</strong></td>
-                                            <td><strong>AAAA/MM/DD</strong></td>
-                                            <td><button class="btn btn-primary btn-sm">Editar</button></td>
-                                        </tr>
-                                    </tbody>
+                            <div class="row">
+                                <h2 class="h4 p-x-1 m-b-2">Notificaciones en proceso</h2>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="row">
+                                    <table class="table dataTables table-bordered table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th><i class="fa fa-sort-amount-desc"></i> Nombre</th>
+                                                <th><i class="fa fa-sort-amount-desc"></i> Campaña</th>
+                                                <th><i class="fa fa-sort-amount-desc"></i> Fecha</th>
+                                                <th><i class="fa fa-sort-amount-desc"></i> Accion</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                                <tr>
+                                                    <td><strong>Prevení el Dengue</strong></td>
+                                                    <td><strong>Dengue</strong></td>
+                                                    <td><strong>AAAA/MM/DD</strong></td>
+                                                    <td><button  class="btn btn-primary btn-sm" onclick="location.replace('./editar.html')">Editar</button></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Notificación 6</strong></td>
+                                                    <td><strong>-</strong></td>
+                                                    <td><strong>AAAA/MM/DD</strong></td>
+                                                    <td><button class="btn btn-primary btn-sm">Editar</button></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Notificación 7</strong></td>
+                                                    <td><strong>Campaña C</strong></td>
+                                                    <td><strong>AAAA/MM/DD</strong></td>
+                                                    <td><button class="btn btn-primary btn-sm">Editar</button></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Notificación 8</strong></td>
+                                                    <td><strong>Campaña B</strong></td>
+                                                    <td><strong>AAAA/MM/DD</strong></td>
+                                                    <td><button class="btn btn-primary btn-sm">Editar</button></td>
+                                                </tr>
+                                            </tbody>
                                     </table>
-                                </section>
-                                <section>
-                                    <h2 class="h4">Notificaciones realizadas</h2>
-                                    <table class="table table-responsive-poncho table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th><p class="text-muted">Nombre</p></th>
-                                            <th><p class="text-muted">Campaña</p></th>
-                                            <th><p class="text-muted">Fecha</p></th>
-                                            <th><p class="text-muted">Accion</p></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td><strong>Notificación 1</strong></td>
-                                            <td><strong>Campaña A</strong></td>
-                                            <td><strong>AAAA/MM/DD</strong></td>
-                                            <td><button class="btn btn-primary btn-sm" onclick="location.replace('./ver.html')">Ver</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>Notificación 2</strong></td>
-                                            <td><strong>Campaña B</strong></td>
-                                            <td><strong>AAAA/MM/DD</strong></td>
-                                            <td><button class="btn btn-primary btn-sm">Ver</button></td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>Notificación 3</strong></td>
-                                            <td><strong>Campaña C</strong></td>
-                                            <td><strong>AAAA/MM/DD</strong></td>
-                                            <td><button class="btn btn-primary btn-sm">Ver</button></td>
-                                        </tr>
-                                    </tbody>
-                                    </table>
-                                </section>
+                                </div>
+                            </div>
+                        </div>
+
                                 <div class="text-center">
                                     <ul class="pagination">
                                         <li class="active">
@@ -161,7 +121,7 @@
                                 </div>
                             </div>
                         </div>
-                    </article>
+                    </div>
                 </section>
             </div>
         </div>
