--- a/notificaciones/nuevapush.html
+++ b/notificaciones/nuevapush.html
@@ -11,34 +11,47 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="jumbotron bg-primary">
-        <div class="jumbotron_body">
-            <div class="container">
-                <div class="row"></div>
-            </div>
+    <div class="col-md-2 bg-primary p-y-2 p-x-2" style="width: fit-content;">
+        <div class="row">
+          <h1 class="h4 p-x-2"><i class="fa fa-inbox" style="font-size: 0.75em;"></i> Noti.mi</h1>
         </div>
-    </section>
-    <div class="bg-gray">
-        <div class="container">
-            <div class="row">
-                <div id="alignment-example" class="collapse navbar-collapse">
-                    <ul class="nav nav-tabs text-arg-azul">
-                        <li><a href="../notificaciones/index.html"><i class="icono-arg-casa-negativo"></i><strong>Home</strong></a></li>
-                        <li><a href="../notificaciones/index.html"><i class="icono-arg-alarma-negativo"></i><strong>Panel de notificaciones</strong></a></li>
-                        <li><a href="../campañas/index.html"><i class="fa fa-signal"></i><strong>Estadísticas</strong></a></li>
-                        <li><a href="../plantillas/index.html"><i class="fa fa-cog"></i><strong>Configuración</strong></a></li>
-                    </ul>
-                </div>
-            </div>
+        <div class="row">
+          <ul class="nav">
+            <li class="m-y-1">
+              <a href="/index.html"
+                ><i class="icono-arg-casa-negativo" style="font-size: 0.75em;"></i
+                ><strong class="p-l-1">Dashboard</strong></a
+              >
+            </li>
+            <li class="m-y-1">
+              <a href="notificaciones.html"
+                ><i class="icono-arg-alarma-negativo" style="font-size: 0.75em;"></i
+                ><strong class="p-l-1">Notificaciones</strong></a
+              >
+            </li>
+            <li class="m-y-1">
+              <a href="metricas.html"
+                ><i class="fa fa-signal" style="font-size: 0.75em;"></i><strong class="p-l-1">Métricas</strong></a
+              >
+            </li>
+            <li class="m-y-1">
+              <a href="configuracion.html"
+                ><i class="fa fa-cog" style="font-size: 0.75em;"></i><strong class="p-l-1">Configuración</strong></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="row m-y-6 p-y-10 vh-100">
+          <p>Nombre Apellido</p>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-12 m-t-2">
-                <div class="col-md-4 p-x-0">
-                    <h1 class="h4 p-x-0 m-b-0">Crear nueva push</h1>
+            <div class="col-md-10 m-t-2">
+                <div class="col-md-6 p-x-0">
+                    <h1 class="h4 p-x-2 m-b-0">Crear nueva push</h1>
                     <hr>
-                    <form class="p-x-1">
+                    <form class="p-x-3">
                         <div>
                             <fieldset>
                                 <div class="row">
@@ -84,17 +97,20 @@
                             </fieldset>
                         </div>
                     </form>
-                </div>
-                <div class="col-md-6">
-
-                </div>
-                <div class="row m-y-4">
-                    <div class="col-md-8 p-x-1">
-                        <button type="button" class="btn btn-success m-r-2" onclick="location.replace('../componentes/segmentacion.html')">Siguiente</button>
-                        <button type="button" onclick="location.replace('../index.html')" class="btn btn-danger">Cancelar</button>
+                    <div class="p-l-3">
+                        <button type="button" class="btn btn-success m-r-1 btn-sm" onclick="location.replace('../componentes/segmentacion.html')">Siguiente</button>
+                        <button type="button" class="btn btn-success m-r-1 btn-sm" onclick="location.replace('../componentes/segmentacion.html')">Volver</button>
+                        <button type="button" onclick="location.replace('../index.html')" class="btn btn-primary btn-sm">Guardar</button>
                     </div>
+                </div>
+                
+                    <div class="col-md-2">
+                        <p>Hola</p>
+                    </div>
+
             </div>
         </div>
+    
     </div>
 </body>
 </html>
