--- a/configuracion.html
+++ b/configuracion.html
@@ -8,98 +8,226 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="poncho.min.css" />
+
+    <link
+      href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/gh/argob/poncho@release-1.x/dist/css/icono-arg.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
 
   <body>
-    <div class="col-md-2 bg-primary p-y-2 p-x-1">
-      <div class="row">
-        <h1 class="h3 p-x-2"><i class="fa fa-inbox m-r-1"></i> Noti.mi</h1>
-        <hr />
-      </div>
-
-      <ul class="nav">
-        <li class="m-y-1">
-          <a href="index.html"
-            ><i class="icono-arg-casa-negativo m-r-1"></i
-            ><strong>Dashboard</strong></a
-          >
-        </li>
-        <li class="m-y-1">
-          <a href="notificaciones.html"
-            ><i class="icono-arg-alarma-negativo m-r-1"></i
-            ><strong>Notificaciones</strong></a
-          >
-        </li>
-        <li class="m-y-1">
-          <a href="metricas.html"
-            ><i class="fa fa-signal m-r-1"></i><strong>Métricas</strong></a
-          >
-        </li>
-        <li class="m-y-1">
-          <a href="configuracion.html"
-            ><i class="fa fa-cog m-r-1"></i><strong>Configuración</strong></a
-          >
-        </li>
-      </ul>
-    </div>
-    <main>
-      <div class="container">
+    <div class="container-fluid">
+      <div
+        class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
+        style="min-width: fit-content; width: 280px; height: 100vh"
+      >
         <div class="row">
-          <div class="col-md-12">
-            <h1 class="h4">Configuración de usuarios</h1>
-            <hr />
-            <section>
-              <table class="table table-responsive-poncho table-striped">
-                <thead>
-                  <tr>
-                    <th><p class="text-muted">Usuario</p></th>
-                    <th><p class="text-muted">Acción</p></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><strong>Usuario 1</strong></td>
-                    <td>
-                      <button
-                        class="btn btn-primary btn-sm"
-                        onclick="location.replace('usuarios/editarusuario.html')"
-                      >
-                        Editar
-                      </button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><strong>Usuario 2</strong></td>
-                    <td>
-                      <button class="btn btn-primary btn-sm">Editar</button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><strong>Usuario 3</strong></td>
-                    <td>
-                      <button class="btn btn-primary btn-sm">Editar</button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><strong>Usuario 4</strong></td>
-                    <td>
-                      <button class="btn btn-primary btn-sm">Editar</button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              <button
-                type="button"
-                class="btn btn-default btn-tag"
-                onclick="location.replace('notificaciones/index.html')"
+          <a href="index.html">
+            <h1 class="h4 p-x-2">
+              <i class="fa fa-inbox" style="font-size: 0.75em"></i> Noti.mi
+            </h1>
+          </a>
+        </div>
+        <div class="row">
+          <ul class="nav">
+            <li class="m-y-1">
+              <a href="index.html"
+                ><i
+                  class="icono-arg-casa-negativo"
+                  style="font-size: 0.75em"
+                ></i
+                ><strong class="p-l-1">Dashboard</strong></a
               >
-                Volver
-              </button>
-            </section>
-          </div>
+            </li>
+            <li class="m-y-1">
+              <a href="notificaciones.html"
+                ><i
+                  class="icono-arg-alarma-negativo"
+                  style="font-size: 0.75em"
+                ></i
+                ><strong class="p-l-1">Notificaciones</strong></a
+              >
+            </li>
+            <li class="m-y-1">
+              <a href="metricas.html"
+                ><i class="fa fa-signal" style="font-size: 0.75em"></i
+                ><strong class="p-l-1">Métricas</strong></a
+              >
+            </li>
+            <li class="m-y-1">
+              <a href="configuracion.html"
+                ><i class="fa fa-cog" style="font-size: 0.75em"></i
+                ><strong class="p-l-1">Configuración</strong></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="row m-y-6 p-y-10 vh-100">
+          <p>Nombre Apellido</p>
         </div>
       </div>
-    </main>
+      <div class="col-md-9 p-l-3 p-y-1 p-x-2">
+        <h1 class="h3 p-x-2 m-b-3">
+          <i class="fa fa-chevron-left" style="font-size: 0.75em"></i>
+          Configuración de usuarios
+        </h1>
+        <div class="row p-x-3">
+          <button
+            onclick="location.replace('notificaciones/nuevanoti.html')"
+            class="btn btn-success btn-sm pull-right m-y-1"
+          >
+            + Nuevo usuario
+          </button>
+        </div>
+        <div class="row p-y-2 p-x-2">
+          <div class="row">
+            <table
+              class="table dataTables table-bordered table-striped bg-white"
+            >
+              <thead>
+                <tr>
+                  <th><p class="text-muted">Usuario</p></th>
+                  <th><p class="text-muted">Acción</p></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><strong>Usuario 1</strong></td>
+                  <td>
+                    <button
+                      class="btn btn-primary btn-sm"
+                      onclick="location.replace('usuarios/editarusuario.html')"
+                    >
+                      Editar
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 2</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 3</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 4</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 1</strong></td>
+                  <td>
+                    <button
+                      class="btn btn-primary btn-sm"
+                      onclick="location.replace('usuarios/editarusuario.html')"
+                    >
+                      Editar
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 2</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 3</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 4</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 1</strong></td>
+                  <td>
+                    <button
+                      class="btn btn-primary btn-sm"
+                      onclick="location.replace('usuarios/editarusuario.html')"
+                    >
+                      Editar
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 2</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 3</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Usuario 4</strong></td>
+                  <td>
+                    <button class="btn btn-primary btn-sm">Editar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="text-center">
+            <ul class="pagination">
+              <li class="active">
+                <span>1</span>
+              </li>
+              <li>
+                <a href="#">2</a>
+              </li>
+              <li><a>3</a></li>
+              <li><a>4</a></li>
+              <li><a>5</a></li>
+              <li><a>6</a></li>
+              <li><a>7</a></li>
+              <li><a>8</a></li>
+              <li><a>9</a></li>
+              <li class="pager-ellipsis disabled">
+                <span>..</span>
+              </li>
+              <li class="next">
+                <a>></a>
+              </li>
+              <li class="pager-last">
+                <a>>></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <button
+          type="button"
+          class="btn btn-default btn-tag"
+          onclick="location.replace('notificaciones/index.html')"
+        >
+          Volver
+        </button>
+      </div>
+    </div>
   </body>
 </html>
